--- a/.github/workflows/.sample.yaml
+++ b/.github/workflows/.sample.yaml
@@ -12,11 +12,7 @@ jobs:
             echo Welcome Github action jog
             ls -ltra
             cat README.md
-        - name: Install cowsay
-          run: sudo apt-get install -y cowsay
-
-        - name: Generate Ascii Art
-          run: cowsay -f dragon "Run for cover" >> dragon.txt
-
-        - name: Read file
-          run: cat dragon.txt
+        - name: run ascii script
+          run: |
+            chmod +x ascii.sh
+            ./ascii.sh
